apps/base/actual/actual.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: actual
  namespace: app-actual

spec:
  replicas: 0
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: actual
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: actual
    spec:
      nodeSelector:
        kubernetes.io/hostname: cadance
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: actual
          image: actualbudget/actual-server:sha-843e957-alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            exec:
              command: ["/usr/bin/node", "/app/src/scripts/health-check.js"]
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            exec:
              command: ["/usr/bin/node", "/app/src/scripts/health-check.js"]
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 5006
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-actual/data
            type: Directory
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: home.arpa/zfs-pool
                    operator: In
                    values:
                      - "true"
---
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: app-actual

spec:
  ports:
    - name: http
      port: 5006
      targetPort: http
  selector:
    app: actual
