apps/base/actual/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual
  namespace: app-actual

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`actual.cluster.arpa`)
      kind: Rule
      services:
        - name: actual
          namespace: app-actual
          port: http
  tls:
    secretName: traefik-tls
